--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     background-color: whitesmoke;
     text-align: center;
-    background-image: "https://buscacoach.cloudcoaching.com.br/uploads/news-pictures/2254-barreiras-blog-post-image-20170729111158.jpg";
+    background-image: url("https://buscacoach.cloudcoaching.com.br/uploads/news-pictures/2254-barreiras-blog-post-image-20170729111158.jpg");
 }
